[gd_scene load_steps=10 format=2]

[ext_resource path="res://MatchScene/TeamSelectionUI.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MatchScene/NameCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/a font.tres" type="DynamicFont" id=4]
[ext_resource path="res://MatchScene/PlayerStatsViewer.gd" type="Script" id=5]

[sub_resource type="Theme" id=15]
GridContainer/constants/hseparation = 50
GridContainer/constants/vseparation = 20
VBoxContainer/constants/separation = 20

[sub_resource type="DynamicFont" id=18]
size = 150
outline_size = 3
outline_color = Color( 0.254902, 0.662745, 0.647059, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.521569, 0.796078, 0.815686, 1 )

[sub_resource type="DynamicFont" id=20]
size = 27
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TeamSelectionUI" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, 184 )
points = PoolVector2Array( 1920.37, -3.66284, -2.39679, -3.8028 )
__meta__ = {
"_edit_group_": true
}

[node name="HumanTeamBench" type="GridContainer" parent="."]
margin_left = 62.2182
margin_top = 209.38
margin_right = 636.218
margin_bottom = 933.38
theme = SubResource( 15 )
columns = 2

[node name="NameCard1" parent="HumanTeamBench" instance=ExtResource( 3 )]
margin_bottom = 100.0

[node name="NameCard2" parent="HumanTeamBench" instance=ExtResource( 3 )]
margin_left = 300.0
margin_right = 550.0
margin_bottom = 100.0

[node name="NameCard3" parent="HumanTeamBench" instance=ExtResource( 3 )]
margin_top = 120.0
margin_bottom = 220.0

[node name="NameCard4" parent="HumanTeamBench" instance=ExtResource( 3 )]
margin_left = 300.0
margin_top = 120.0
margin_right = 550.0
margin_bottom = 220.0

[node name="NameCard5" parent="HumanTeamBench" instance=ExtResource( 3 )]
margin_top = 240.0
margin_bottom = 340.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 808.0
margin_top = 197.0
margin_right = 1796.0
margin_bottom = 967.0
color = Color( 0.839216, 0.623529, 0.207843, 1 )

[node name="LiberoNameCard" parent="." instance=ExtResource( 3 )]
margin_left = 656.129
margin_top = 726.075
margin_right = 906.129
margin_bottom = 826.075

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 787.567, 462.377 )
scale = Vector2( 0.326706, 1.39676 )
points = PoolVector2Array( 3177.78, -3.66284, -2.39679, -3.8028 )
default_color = Color( 0.867188, 0.732952, 0.474243, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 787.567, 218.695 )
scale = Vector2( 0.326706, 2.57903 )
points = PoolVector2Array( 3177.78, -3.66284, -2.39679, -3.8028 )
default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TeamName" type="Label" parent="."]
margin_left = 16.0
margin_right = 619.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 18 )
text = "Australia"

[node name="AcceptButton" type="Button" parent="."]
margin_left = 1490.36
margin_top = 947.916
margin_right = 1920.36
margin_bottom = 1079.92
custom_fonts/font = ExtResource( 4 )
text = "Accept"

[node name="HumanTeam" type="Control" parent="."]

[node name="NameCard1" parent="HumanTeam" instance=ExtResource( 3 )]
margin_left = 1532.31
margin_top = 545.542
margin_right = 1782.31
margin_bottom = 645.542

[node name="NameCard2" parent="HumanTeam" instance=ExtResource( 3 )]
margin_left = 1531.58
margin_top = 295.755
margin_right = 1781.58
margin_bottom = 395.755

[node name="NameCard3" parent="HumanTeam" instance=ExtResource( 3 )]
margin_left = 1182.0
margin_top = 296.0
margin_right = 1432.0
margin_bottom = 396.0

[node name="NameCard4" parent="HumanTeam" instance=ExtResource( 3 )]
margin_left = 832.0
margin_top = 295.0
margin_right = 1082.0
margin_bottom = 395.0

[node name="NameCard5" parent="HumanTeam" instance=ExtResource( 3 )]
margin_left = 832.0
margin_top = 546.0
margin_right = 1082.0
margin_bottom = 646.0

[node name="NameCard6" parent="HumanTeam" instance=ExtResource( 3 )]
margin_left = 1183.0
margin_top = 546.0
margin_right = 1433.0
margin_bottom = 646.0

[node name="PlayerStatsViewer" type="Panel" parent="."]
margin_left = 57.3008
margin_top = 623.49
margin_right = 632.301
margin_bottom = 1015.49
custom_styles/panel = SubResource( 19 )
script = ExtResource( 5 )

[node name="Name" type="Label" parent="PlayerStatsViewer"]
margin_top = 10.0
margin_right = 576.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 20 )
text = "Karteez Arminhalf"
align = 1

[node name="Serve" type="Label" parent="PlayerStatsViewer"]
margin_left = 35.5636
margin_top = 58.1085
margin_right = 611.564
margin_bottom = 95.1085
custom_fonts/font = SubResource( 20 )
text = "Serve: 99"

[node name="Receive" type="Label" parent="PlayerStatsViewer"]
margin_left = 35.5636
margin_top = 90.1085
margin_right = 611.564
margin_bottom = 127.109
custom_fonts/font = SubResource( 20 )
text = "Receive: 99"

[node name="Set" type="Label" parent="PlayerStatsViewer"]
margin_left = 35.5636
margin_top = 123.109
margin_right = 611.564
margin_bottom = 160.109
custom_fonts/font = SubResource( 20 )
text = "Set: 99"

[node name="Block" type="Label" parent="PlayerStatsViewer"]
margin_left = 35.5636
margin_top = 155.109
margin_right = 611.564
margin_bottom = 192.109
custom_fonts/font = SubResource( 20 )
text = "Block: 99"

[node name="Spike" type="Label" parent="PlayerStatsViewer"]
margin_left = 299.564
margin_top = 58.1085
margin_right = 875.564
margin_bottom = 95.1085
custom_fonts/font = SubResource( 20 )
text = "Spike: 99"

[node name="Speed" type="Label" parent="PlayerStatsViewer"]
margin_left = 299.564
margin_top = 90.1085
margin_right = 875.564
margin_bottom = 127.109
custom_fonts/font = SubResource( 20 )
text = "Speed: 99"

[node name="SpikeHeight" type="Label" parent="PlayerStatsViewer"]
margin_left = 299.564
margin_top = 123.109
margin_right = 875.564
margin_bottom = 160.109
custom_fonts/font = SubResource( 20 )
text = "Spike Height: 99"

[node name="BlockHeight" type="Label" parent="PlayerStatsViewer"]
margin_left = 299.564
margin_top = 155.109
margin_right = 875.564
margin_bottom = 192.109
custom_fonts/font = SubResource( 20 )
text = "Block Height: 99"
